# emergent-structure

./: README.md  pyproject.toml
benchmark_data/: snapshot_cases.jsonl
benchmarks/: dirty_metadata_trap_benchmark.py  external_benchmark_suite.py  generated_profile_sensitivity_benchmark.py  multi_domain_stress_benchmark.py  profile_sensitivity_benchmark.py  public_evidence_admission_benchmark.py  quality_gate_report.py  score_human_audit.py  snapshot_benchmark.py
docs/: dirty_metadata_trap_benchmark.md  installable_usage.md  phase1_clean_room_record.md  product_mvp_roadmap.md  public_evidence_admission_benchmark.md  role_intent_gating.md
examples/: clean_negative_control.py  cli_input_example.json  contradiction_benchmark.py  export_manual_llm_prompts.py  github_corpus_demo.py  github_real_data_demo.py  implementation_api_demo.py  llm_response_comparison_demo.py  rag_adapter_demo.py  sample_corpus.jsonl
src/persistence_memory/: adapters.py  api.py  audit.py  benchmark.py  chroma_adapter.py  cli.py  controller.py  llm_eval.py  local_vector.py  middleware.py  models.py  profiles.py  reports.py  retriever.py  role_config.py  scorer.py
tests/: test_audit_helpers.py  test_comparative_benchmark.py  test_controller.py  test_external_benchmark_suite.py  test_github_corpus_demo.py  test_github_real_issue_benchmark.py  test_implementation_api.py  test_llm_eval.py  test_multi_domain_stress_benchmark.py  test_product_mvp_wrappers.py  test_rag_adapter_demo.py  test_retriever_and_benchmark.py
