[project]
name = "persistence-memory"
version = "0.2.0"
description = "Persistence-aware evidence admission middleware for influence-gated retrieval"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "JayCamm" }]
dependencies = []

[project.scripts]
persistence-gate = "persistence_memory.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
vector = [
    "chromadb>=0.5.0",
    "opentelemetry-api==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-proto==1.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
